# THERAPI

./: README.md  package.json  pyproject.toml
.kilocode/rules/memory-bank/: architecture.md  context.md  product.md  tech.md
apisniffer_old/src/main/java/de/apisniffer/client/: GenericServiceClient.java  Link.java  LinkHeaderParser.java  LinkHeaderType.java
apisniffer_old/src/main/java/de/apisniffer/json/: JsonMapper.java  JsonMappingException.java  Types.java
apisniffer_old/src/test/java/de/apisniffer/client/: LinkHeaderParserTest.java
apisniffer_old/src/test/java/de/apisniffer/json/: JsonMapperTest.java
apisniffer_old/xsd2json/: pom.xml  rest-2.51.xsd
feat/: autolistener.patch
src/: discovery-registry.js  discovery-types.js  mock-generator.js  openapi-generator.js  schema-inference.js  server.js
src/therapi/: proxy.py  registry.py  service_directory.py
tests/: test_schema_and_openapi.py
