[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "THERAPI"
version = "0.1.0"
description = "Runtime API discovery proxy and OpenAPI generator to cure your headaches"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
